# corePicoC

./: .gitignore  CMakeLists.txt  README.md  main.c  roles.c
roles/: CMakeLists.txt  relaySwitch.c  runner.c  runner.h
